# avorag

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: ci.yml
data/: corpus_manifest.json  prohibidos_co.json
data/corpus/: .gitkeep
data/corpus_curado/: ica_1507_2016_cuarentenarias.md  sanidad_quiescente_sunblotch.md
data/destinos/: destino_eeuu.json  destino_ue.json
data/eval/: questions_500.json  reverify_rojo.jsonl  sweep_results.jsonl  sweep_results_3b_baseline.jsonl
data/feeds_example/: ica_registros.csv
data/golden/: golden_set.example.jsonl  hass_v1.jsonl
data/redteam/: failure_modes.jsonl
data/vision/: DATASETS.md
docs/: ACTIVACION_ONLINE.md  ARCHITECTURE.md  ARQUITECTURA_ONLINE.md  CALCULADORAS.md  CASE_STUDY.md  CASO_DE_ESTUDIO.md  DESPLIEGUE_ONLINE_GRATIS.md  DEUDA_TECNICA.md  GOLDEN_SET.md  LIMITACIONES.md  MOBILE.md  PLAN_NO_CODIGO.md  REVISION_CRITICA_AGRONOMO_Y_DUENO.md  REVISION_VISION_2026-06-16.md  RUNBOOK.md  SECURITY.md  SOBERANIA_DE_DATOS.md  SOURCES.md  TERMINOS_DE_USO.md  VISION.md  VISION_CASE_STUDY.md  roi_calculadora.html
docs/adr/: 0001-stack-code-first.md  0002-proveedores-locales-por-defecto.md  0003-recuperacion-hibrida-rrf-reranking.md  0004-dimension-embeddings-y-reindex.md  0005-metrica-de-asesor-de-seguridad.md
docs/contracts/: openapi.online.yaml  schema_online.sql
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_url_doi.py  0003_tenants_rls.py  0004_rls_fail_closed.py  0005_online_feeds_norms_hitl.py
scripts/: bench_model.py  build_answer_bank.py  build_corpus.py  build_knowledge_bundle.py  cobertura_corpus.py  dev.ps1  eval_independent_judge.py  eval_sweep.py  export_onnx.py  prepare_maturity_dataset.py  refresh_feeds.py  retention_report.py  reverify.py  seed_norms.py  tenant_data.py  train_vision.py
src/avorag/: __init__.py  agro_calc.py  agro_terms.py  config.py  logging.py  markets.py
src/avorag/api/: __init__.py  app.py  auth.py  routes_calc.py  routes_chat.py  routes_health.py  routes_online.py  routes_vision.py
src/avorag/api/static/: index.html
src/avorag/cli/: __init__.py  main.py
src/avorag/db/: __init__.py  engine.py  models.py  models_online.py
src/avorag/eval/: __init__.py  golden_set.py  metrics.py  report_html.py  run_eval.py
src/avorag/ingestion/: __init__.py  chunking.py  contextual.py  loaders.py  metadata.py  pipeline.py
src/avorag/online/: __init__.py  calc_norms.py  capabilities.py  feedback.py  feeds.py  hitl.py  integration.py  jwt_auth.py  norms.py  observability.py  ratelimit.py  regulatory.py  roles.py  sync.py  worker.py
src/avorag/providers/: __init__.py  base.py  embeddings.py  fakes.py  llm.py  registry.py  rerank.py
src/avorag/rag/: __init__.py  conversation.py  destino.py  freshness.py  guardrails.py  pipeline.py  prewarm.py  prompt.py  schemas.py
src/avorag/retrieval/: __init__.py  hybrid.py  rerank.py  types.py
src/avorag/vision/: __init__.py  base.py  bridge.py  classifier.py  describe.py  fakes.py  labels.py  registry.py  schemas.py
tests/: conftest.py  test_agro_calc.py  test_api_auth.py  test_calc_norms_online.py  test_capabilities_online.py  test_chunking.py  test_conversation.py  test_corpus_governance.py  test_csv_provider_online.py  test_decoupling.py  test_destino.py  test_disclaimer.py  test_dose_guardrails.py  test_dose_units.py  test_export_market_safety.py  test_failsafe_invariants.py  test_feedback_online.py  test_feeds_online.py  test_followups.py  test_freshness.py  test_golden_set.py  test_guardrails_dose.py  test_hardening_online.py  test_hitl_online.py  test_http_provider_online.py  test_ingestion_dose.py  test_ingestion_quality.py  test_integration_online.py  test_intent.py  test_loaders.py  test_market_normalization.py  test_metrics_honest.py  test_migration_0005_online.py  test_models_online.py  test_norms_online.py  test_pipeline_e2e.py  test_prompt.py  test_prompt_contract.py  test_redteam_failure_modes.py  test_regulatory_online.py  (+13 more)
